--- a/src/app/feature/list-view/list-view.component.html
+++ b/src/app/feature/list-view/list-view.component.html
@@ -1,7 +1,7 @@
-<!--<div *ngFor="let stock of stocks$ | async">
-  <app-card-view [symbol]="stock"></app-card-view>
-</div>-->
-
-<div *ngIf="stockService.stock | async as stocks">
-  {{ stocks }}
+<div>
+  ok
+  <!--<ng-container *ngFor="let stock of stockService.stock | async as stocks">
+    <app-card-view [symbol]="stock"></app-card-view>
+    {{ stock }}
+  </ng-container>-->
 </div>
