--- a/src/app/feature/list-view/list-view.component.html
+++ b/src/app/feature/list-view/list-view.component.html
@@ -1,7 +1,6 @@
 <div>
-  ok
-  <!--<ng-container *ngFor="let stock of stockService.stock | async as stocks">
+  <ng-container *ngFor="let stock of stockService.stock | async as stocks">
     <app-card-view [symbol]="stock"></app-card-view>
     {{ stock }}
-  </ng-container>-->
+  </ng-container>
 </div>
