--- a/src/app/feature/card-view/card-view.component.html
+++ b/src/app/feature/card-view/card-view.component.html
@@ -8,5 +8,8 @@
     <div>Current price: {{ currentPrice }}</div>
     <div>High price: {{ highPrice }}</div>
   </div>
-  <button (click)="clickBtn()">Go to social sentiment details ></button>
+  <button (click)="clickBtn()" id="sentiment{{ symbol }}">
+    Go to social sentiment details >
+  </button>
+  <button (click)="deleteStock(symbol)" id="remove{{ symbol }}">X</button>
 </div>
