9 files modified, 6 added

--- a/src/app/feature/form-symbol/form-symbol.component.html
+++ b/src/app/feature/form-symbol/form-symbol.component.html
@@ -1,4 +1,4 @@
-<form class="card" [formGroup]="stockForm" (ngSubmit)="onSubmit()">
+<form [formGroup]="stockForm" (ngSubmit)="onSubmit()">
   Enter the symbol of a stock to track (i.e. AAPL, TSLA, GOOGL)
   <div class="input-group mb-3 d-flex justify-content-start">
     <input
