--- a/src/app/feature/card-view/card-view.component.html
+++ b/src/app/feature/card-view/card-view.component.html
@@ -11,23 +11,22 @@
       </button>
     </div>
 
-    <div class="d-flex justify-content-center">{{ name }}</div>
+    <div class="d-flex justify-content-center">{{ name }} ({{ symbol }})</div>
     <div class="container">
-      <div>Change today: {{ changeTodayValue }}</div>
-      <div>Opening price: {{ openingPrice }}</div>
+      <div>Change today: {{ changeTodayValue }}%</div>
+      <div>Opening price: {{ openingPrice | currency: 'USD' }}</div>
     </div>
     <div class="container">
-      <div>Current price: {{ currentPrice }}</div>
-      <div>High price: {{ highPrice }}</div>
+      <div>Current price: {{ currentPrice | currency: 'USD' }}</div>
+      <div>High price: {{ highPrice | currency: 'USD' }}</div>
     </div>
-    <!--<img [src]="changeTodayValue > 1 ? :">-->
     <div
       class="d-flex justify-content-center"
-      [ngClass]="changeTodayValue > 0 ? 'arrowUp' : 'arrowDown'"
+      [ngClass]="changeTodayValue >= 0 ? 'arrowUp' : 'arrowDown'"
     ></div>
     <button
       type="button"
-      (click)="clickBtn()"
+      routerLink="/sentiment/{{ symbol }}"
       id="sentiment{{ symbol }}"
       class="btn btn-light"
     >
