--- a/src/app/feature/list-view/list-view.component.html
+++ b/src/app/feature/list-view/list-view.component.html
@@ -14,4 +14,11 @@
   </ng-container>
 </div>
 
+<div class="d-flex justify-content-around flex-wrap">
+<ng-container *ngFor="let stock of stocks">
+  <div>{{stock}}</div>
+</ng-container>
+</div>
+
+
 <ng-template #loading>Chargement</ng-template>
