--- a/src/app/feature/list-view/list-view.component.html
+++ b/src/app/feature/list-view/list-view.component.html
@@ -1,8 +1,11 @@
-<div class="d-flex justify-content-around flex-wrap">
-  <ng-container *ngFor="let stock of stocks$ | async">
+<div
+  class="d-flex justify-content-around flex-wrap"
+  *ngIf="stocks$ | async as stocks"
+>
+  <ng-container *ngFor="let stock of stocks">
     <app-card-view
       *ngIf="stock | async as stockDetails"
-      [symbol]="stockDetails"
+      [stock]="stockDetails"
     ></app-card-view>
   </ng-container>
 </div>
