8 files modified, 1 deleted

--- a/src/app/feature/global-view/global-view.component.html
+++ b/src/app/feature/global-view/global-view.component.html
@@ -1,2 +1,9 @@
-<app-form-symbol class="d-flex justify-content-around"></app-form-symbol>
-<app-list-view></app-list-view>
+<app-form-symbol
+  (addEventEmitter)="add($event)"
+  class="d-flex justify-content-around"
+></app-form-symbol>
+<!-- envoyer une liste d'obseervable-->
+<app-list-view
+  (deleteEventEmitter)="delete($event)"
+  [listStocks]="listStocks$ | async"
+></app-list-view>
