--- a/src/app/feature/detail-view/detail-view.component.html
+++ b/src/app/feature/detail-view/detail-view.component.html
@@ -1,10 +1,10 @@
 <div class="card">
   <div class="card-body">
-    <div class="d-flex justify-content-center">{{ symbol }} Name</div>
+    <div class="d-flex justify-content-center">{{ symbol }} {{ name }}</div>
   </div>
   <div class="d-flex justify-content-around">
     <div *ngFor="let stock of stocks">
-      <div>{{ stock.date }}</div>
+      <div>{{ stock.month | convertMonth }} {{ stock.year }}</div>
       <div [ngClass]="stock.change >= 0 ? 'arrowUp' : 'arrowDown'"></div>
       <div>{{ stock.change }}</div>
       <div>{{ stock.mspr }}</div>
